--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <dic class="wrapper">
+    <div class="wrapper">
         <div class="btn" id="btn"></div>
         <div class="box" id="box"></div>
         <div class="flagBox" id="flagBox">
@@ -20,7 +20,7 @@
                 <div class="close" id="close"></div>
             </div>
         </div>
-    </dic>
+    </div>
     <script src="./js/index.js"></script>
 </body>
 </html>
